--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-<meta http-equiv="refresh" content="time; URL=https://sociocats.github.io/wikisocion/" />
+<meta http-equiv="refresh" content="1; URL=https://sociocats.github.io/wikisocion/" />
    </head>
    <body>
      <h1>Sociocats Ana Website.</h1>
