--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+<meta charset="utf-8">
+<meta name="theme-color" content="#ffffff">
+<meta name="description" content="Sociocats - Socionics" />
+<meta property="og:title" content="Sociocats" />
+<meta property="og:type" content="article" />
+<meta property="og:description" content="Sociocats - Socionics" />
+<meta property="og:url" content="https://sociocats.github.io/" />
+<meta property="og:site_name" content="Sociocats" />
+<meta property="og:image" content="https://sociocats.github.io/Sociocats/Sociocats_Icon.jpg" />
+<meta property="og:image:width" content="128" />
+<meta property="og:image:height" content="128" />
+      <title>Sociocats Ana Website</title>
 <meta http-equiv="refresh" content="1; URL=https://sociocats.github.io/wikisocion/" />
    </head>
    <body>
